--- a/ propeller-w5200-driver/Spinneret-msrobots/changes.txt
+++ b/ propeller-w5200-driver/Spinneret-msrobots/changes.txt
@@ -11,5 +11,6 @@
 		did some optimisation for size ... running out of space ...
 10/04/2013	added spindoc comments
 		added VS2008 sources for cmdline tools
+		replaced SNTP Simple Network Time Protocol v2.01.spin by Sntp.spin
 
 
