--- a/ propeller-w5200-driver/Spinneret-msrobots/changes.txt
+++ b/ propeller-w5200-driver/Spinneret-msrobots/changes.txt
@@ -3,15 +3,18 @@
 		added SetHostname to DHCP
 9/1/2013	added cmdtools dir with tools to test webdav
 		added propfind.spin - pasm propfind handler (not complete yet) - (compile to binary rename propfind.pse and put on sd-root)
-		added dirhtm.spin - pasm demo - (compile to binary rename dirhtm.psx and put on sd-root)
-		added dirxml.spin - pasm demo - (compile to binary rename dirxml.psx and put on sd-root)
+		added dirhtm.spin   - pasm demo - (compile to binary rename dirhtm.psx and put on sd-root)
+		added dirxml.spin   - pasm demo - (compile to binary rename dirxml.psx and put on sd-root)
 9/26/2013	commented out alot of unused methods
 		commented sourcecode and added some spindoc comments
-		added netbios to main program
+		added NetBios to main program
 		did some optimisation for size ... running out of space ...
 10/04/2013	added spindoc comments
 		added VS2008 sources for cmdline tools
 		replaced SNTP Simple Network Time Protocol v2.01.spin by Sntp.spin
 10/05/2013	added more spindoc comments
-
-
+10/19/2013      added Dns to main program
+		added testpost.spin - pasm demo - (compile to binary rename testpost.psx and put on sd-root)
+		added dnsquery.spin - pasm demo - (compile to binary rename dnsquery.psx and put on sd-root)
+10/24/2013      added nbquery.spin  - pasm demo - (compile to binary rename nbquery.psx and put on sd-root)
+		added nbtstat.spin  - pasm demo - (compile to binary rename nbtstat.psx and put on sd-root)
